--- a/app/src/main/res/layout/activity_accounts.xml
+++ b/app/src/main/res/layout/activity_accounts.xml
@@ -10,17 +10,41 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+
+        <Button
+            android:id="@+id/navbutton"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content"
+            android:text="="
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Account"
+            android:paddingLeft="12dp"
+            android:textSize="20sp"
+            android:gravity="" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="68dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity=""
             android:paddingLeft="25dp"
-            android:text="My Account"
+            android:text="@string/myaccount"
             android:textSize="16sp" />
 
     </LinearLayout>
