--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -155,13 +155,13 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnConfirmCart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Confirm"
-            android:paddingStart="50dp"
+            android:layout_gravity="center"
             android:paddingEnd="50dp"
-            android:layout_gravity="center" />
+            android:paddingStart="50dp"
+            android:text="Confirm" />
 
     </LinearLayout>
 
