--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -96,7 +96,14 @@
                 android:text="Product Description"
                 android:gravity="center"
                 android:paddingVertical="15dp"
-                android:textSize="17sp" />
+                android:textSize="15sp"
+                android:layout_marginTop="20dp" />
+
+            <MultiAutoCompleteTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:layout_marginBottom="15dp" />
 
         </LinearLayout>
 
