--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -37,24 +37,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Product Name"
                 android:gravity="center"
                 android:paddingVertical="15dp"
+                android:text="Product Name"
                 android:textSize="17sp" />
 
             <ImageView
                 android:id="@+id/prodImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/ic_launcher"
                 android:paddingVertical="40dp"
-                android:layout_gravity="center"/>
+                app:srcCompat="@mipmap/ic_launcher" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -65,45 +65,45 @@
                     android:id="@+id/prodImage1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="right"
                     android:layout_weight="1"
-                    app:srcCompat="@mipmap/ic_launcher"
                     android:padding="10dp"
-                    android:layout_gravity="right"/>
+                    app:srcCompat="@mipmap/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/prodImage2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:layout_weight="1"
-                    app:srcCompat="@mipmap/ic_launcher"
                     android:padding="10dp"
-                    android:layout_gravity="center"/>
+                    app:srcCompat="@mipmap/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/prodImage3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="left"
                     android:layout_weight="1"
-                    app:srcCompat="@mipmap/ic_launcher"
                     android:padding="10dp"
-                    android:layout_gravity="left"/>
+                    app:srcCompat="@mipmap/ic_launcher" />
 
             </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Product Description"
+                android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:paddingVertical="15dp"
-                android:textSize="15sp"
-                android:layout_marginTop="20dp" />
+                android:text="Product Description"
+                android:textSize="15sp" />
 
             <MultiAutoCompleteTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:layout_marginBottom="15dp" />
+                android:layout_marginBottom="15dp"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
