--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -103,7 +103,6 @@
         android:layout_height="55dp"
         android:orientation="horizontal">
 
-
         <TextView
             android:id="@+id/textView19"
             android:layout_width="206dp"
@@ -111,14 +110,16 @@
             android:text=" Product Name : Price"
             android:textSize="20sp" />
 
+
         <TextView
-            android:id="@+id/textView20"
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:text=" Product Name : Price"
             android:textSize="20sp" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -168,9 +169,5 @@
             android:textSize="20sp" />
 
     </LinearLayout>
-
-
-
-
 
 </LinearLayout>
