--- a/app/src/main/res/layout/activity_pcategories.xml
+++ b/app/src/main/res/layout/activity_pcategories.xml
@@ -94,8 +94,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/HomeImage9"
