--- a/app/src/main/res/layout/activity_accounts_preferences.xml
+++ b/app/src/main/res/layout/activity_accounts_preferences.xml
@@ -16,7 +16,7 @@
             android:id="@+id/navbutton"
             android:layout_width="65dp"
             android:layout_height="wrap_content"
-            android:text="<-"
+            android:text="@string/backbutton"
             android:gravity="center"/>
 
         <TextView
