--- a/app/src/main/res/layout/activity_my_account__sign_in.xml
+++ b/app/src/main/res/layout/activity_my_account__sign_in.xml
@@ -17,7 +17,7 @@
             android:id="@+id/navbutton"
             android:layout_width="65dp"
             android:layout_height="wrap_content"
-            android:text="<-"
+            android:text="@string/backbutton"
             android:gravity="center"/>
 
         <TextView
@@ -53,15 +53,14 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content">
 
                 <TextView
                     android:id="@+id/textView26"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0"
                     android:text="Old Password:"
                     android:textSize="15dp"
                     android:layout_marginRight="17dp"/>
@@ -87,7 +86,6 @@
                     android:id="@+id/textView27"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight=""
                     android:text="New Password:"
                     android:textSize="15dp"
                     android:layout_marginRight="10dp"/>
@@ -113,7 +111,6 @@
                     android:id="@+id/textView28"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight=""
                     android:text="Confirm Password:"
                     android:textSize="15dp"
                     android:layout_marginRight="10dp"/>
