--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
             android:textSize="17sp" />
 
         <EditText
-            android:id="@+id/txtlogIn"
+            android:id="@+id/txtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -77,18 +77,18 @@
             android:textSize="17sp" />
 
         <EditText
-            android:id="@+id/txtPassword"
+            android:id="@+id/txtPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:ems="10"
             android:hint="Please enter your password"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:textSize="13sp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
