--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,28 +9,38 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="58dp"
         android:orientation="horizontal">
 
 
         <Button
-            android:id="@+id/navbutton"
-            android:layout_width="65dp"
-            android:layout_height="wrap_content"
-            android:text="="
-            android:gravity="center"/>
+            android:id="@+id/button2"
+            android:layout_width="55dp"
+            android:layout_height="58dp"
+
+            android:gravity="center"
+            android:text="..." />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="92dp"
+            android:paddingLeft="90dp"
             android:paddingTop="12dp"
             android:text="ADAPT DEV"
             android:textSize="20sp" />
 
 
-
     </LinearLayout>
+
+
+     <ScrollView
+         android:layout_width="match_parent"
+         android:layout_height="match_parent">
+     <TableLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,15 +49,16 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="50dp">
 
-        <ImageView
-            android:id="@+id/prodImage"
-            android:layout_width="match_parent"
+        <ImageButton
+            android:id="@+id/HomeImage01"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:paddingVertical="20dp"
+            android:paddingTop="10dp"
             android:scaleX="2"
-            android:scaleY="1"
+            android:scaleY="2"
             app:srcCompat="@mipmap/ic_launcher" />
 
 
@@ -61,12 +72,13 @@
         tools:layout_editor_absoluteY="240dp">
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/textViewHOTITEMS"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:paddingRight="220dp"
             android:text="Hot items"
+            android:background="#686666"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -77,8 +89,8 @@
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="310dp">
 
-    <ImageView
-        android:id="@+id/HomeImage3"
+    <ImageButton
+        android:id="@+id/HotImage1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="right"
@@ -86,14 +98,14 @@
         android:padding="5dp"
         app:srcCompat="@mipmap/ic_launcher" />
 
-    <ImageView
-        android:id="@+id/HomeImage4"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:padding="5dp"
-        app:srcCompat="@mipmap/ic_launcher" />
+        <ImageButton
+            android:id="@+id/HotImage2"
+            android:layout_width="412dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:padding="5dp"
+            app:srcCompat="@mipmap/ic_launcher" />
 
 
 </LinearLayout>
@@ -104,18 +116,18 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView19"
+            android:id="@+id/textV1"
             android:layout_width="206dp"
             android:layout_height="55dp"
-            android:text=" Product Name : Price"
+            android:text=" Product 1 : ₱500.00"
             android:textSize="20sp" />
 
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textV2"
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:text=" Product Name : Price"
+            android:text=" Product 2 : ₱500.00"
             android:textSize="20sp" />
 
     </LinearLayout>
@@ -127,8 +139,8 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="310dp">
 
-        <ImageView
-            android:id="@+id/HomeImage5"
+        <ImageButton
+            android:id="@+id/HotImage3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="right"
@@ -136,8 +148,8 @@
             android:padding="5dp"
             app:srcCompat="@mipmap/ic_launcher" />
 
-        <ImageView
-            android:id="@+id/HomeImage6"
+        <ImageButton
+            android:id="@+id/HotImage4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -155,19 +167,240 @@
 
 
         <TextView
-            android:id="@+id/textView21"
+            android:id="@+id/textV3"
             android:layout_width="206dp"
             android:layout_height="55dp"
-            android:text=" Product Name : Price"
+            android:text=" Product 3 : ₱500.00"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView22"
+            android:id="@+id/textV4"
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:text=" Product Name : Price"
+            android:text=" Product 4 : ₱500.00"
             android:textSize="20sp" />
 
-    </LinearLayout>
+        </LinearLayout>
+                               <!-- PRODUCT LIST -->
 
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="58dp"
+             android:orientation="vertical"
+             tools:layout_editor_absoluteX="0dp"
+             tools:layout_editor_absoluteY="240dp">
+
+
+             <TextView
+                 android:id="@+id/textViewPRODUCTLIST"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:gravity="center"
+                 android:paddingRight="192dp"
+                 android:paddingTop="30dp"
+                 android:text="Product List"
+                 android:textSize="20sp" />
+
+         </LinearLayout>
+                               <!-- APPEND HERE -->
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="horizontal"
+             android:paddingTop="10dp"
+             tools:layout_editor_absoluteX="0dp"
+             tools:layout_editor_absoluteY="310dp">
+
+
+             <ImageButton
+                 android:id="@+id/HotImage5"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_gravity="right"
+                 android:layout_weight="1"
+                 android:padding="5dp"
+                 app:srcCompat="@mipmap/ic_launcher" />
+
+             <ImageButton
+                 android:id="@+id/HotImage6"
+                 android:layout_width="412dp"
+                 android:layout_height="match_parent"
+                 android:layout_gravity="center"
+                 android:layout_weight="1"
+                 android:padding="5dp"
+                 app:srcCompat="@mipmap/ic_launcher" />
+
+
+         </LinearLayout>
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="55dp"
+             android:orientation="horizontal">
+
+             <TextView
+                 android:id="@+id/textV5"
+                 android:layout_width="206dp"
+                 android:layout_height="55dp"
+                 android:text=" Product 5 : ₱500.00"
+                 android:textSize="20sp" />
+
+
+             <TextView
+                 android:id="@+id/textV6"
+                 android:layout_width="match_parent"
+                 android:layout_height="55dp"
+                 android:text=" Product 6 : ₱500.00"
+                 android:textSize="20sp" />
+
+         </LinearLayout>
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="horizontal"
+             tools:layout_editor_absoluteX="0dp"
+             tools:layout_editor_absoluteY="310dp">
+
+             <ImageButton
+                 android:id="@+id/HotImage7"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_gravity="right"
+                 android:layout_weight="1"
+                 android:padding="5dp"
+                 app:srcCompat="@mipmap/ic_launcher" />
+
+             <ImageButton
+                 android:id="@+id/HotImage8"
+                 android:layout_width="412dp"
+                 android:layout_height="match_parent"
+                 android:layout_gravity="center"
+                 android:layout_weight="1"
+                 android:padding="5dp"
+                 app:srcCompat="@mipmap/ic_launcher" />
+
+
+         </LinearLayout>
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="55dp"
+             android:orientation="horizontal">
+
+             <TextView
+                 android:id="@+id/textV7"
+                 android:layout_width="206dp"
+                 android:layout_height="55dp"
+                 android:text=" Product 7 : ₱500.00"
+                 android:textSize="20sp" />
+
+
+             <TextView
+                 android:id="@+id/textV8"
+                 android:layout_width="match_parent"
+                 android:layout_height="55dp"
+                 android:text=" Product 8 : ₱500.00"
+                 android:textSize="20sp" />
+
+         </LinearLayout>
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="horizontal"
+             tools:layout_editor_absoluteX="0dp"
+             tools:layout_editor_absoluteY="310dp">
+
+             <ImageButton
+                 android:id="@+id/HotImage9"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_gravity="right"
+                 android:layout_weight="1"
+                 android:padding="5dp"
+                 app:srcCompat="@mipmap/ic_launcher" />
+
+             <ImageButton
+                 android:id="@+id/HotImage10"
+                 android:layout_width="412dp"
+                 android:layout_height="match_parent"
+                 android:layout_gravity="center"
+                 android:layout_weight="1"
+                 android:padding="5dp"
+                 app:srcCompat="@mipmap/ic_launcher" />
+
+
+         </LinearLayout>
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="55dp"
+             android:orientation="horizontal">
+
+             <TextView
+                 android:id="@+id/textV9"
+                 android:layout_width="206dp"
+                 android:layout_height="55dp"
+                 android:text=" Product 9 : ₱500.00"
+                 android:textSize="20sp" />
+
+
+             <TextView
+                 android:id="@+id/textV10"
+                 android:layout_width="match_parent"
+                 android:layout_height="55dp"
+                 android:text=" Product 10 : ₱500.00"
+                 android:textSize="20sp" />
+
+         </LinearLayout>
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="horizontal"
+             tools:layout_editor_absoluteX="0dp"
+             tools:layout_editor_absoluteY="310dp">
+
+             <ImageButton
+                 android:id="@+id/HotImage11"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_gravity="right"
+                 android:layout_weight="1"
+                 android:padding="5dp"
+                 app:srcCompat="@mipmap/ic_launcher" />
+
+             <ImageButton
+                 android:id="@+id/HotImage12"
+                 android:layout_width="412dp"
+                 android:layout_height="match_parent"
+                 android:layout_gravity="center"
+                 android:layout_weight="1"
+                 android:padding="5dp"
+                 app:srcCompat="@mipmap/ic_launcher" />
+
+
+         </LinearLayout>
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="55dp"
+             android:orientation="horizontal">
+
+             <TextView
+                 android:id="@+id/textV11"
+                 android:layout_width="206dp"
+                 android:layout_height="55dp"
+                 android:text=" Product 11 : ₱500.00"
+                 android:textSize="20sp" />
+
+
+             <TextView
+                 android:id="@+id/textV12"
+                 android:layout_width="match_parent"
+                 android:layout_height="55dp"
+                 android:text=" Product 12 : ₱500.00"
+                 android:textSize="20sp" />
+
+         </LinearLayout>
+     </TableLayout>
+     </ScrollView>
 </LinearLayout>
